fixed game grid visual shift

--- a/public/index.css
+++ b/public/index.css
@@ -51,8 +51,9 @@ body {
     grid-area: game-board;
     width: 100%;
     background-color:var(--items-background-color);
-    padding: 10px;
+    padding: 10px 0;
     border-radius: 10px;
+    margin: 0 auto;
 }
 
 .game-board:has(.card-container) {
@@ -62,8 +63,9 @@ body {
     gap: 10px;
     width: 100%;
     background-color:var(--items-background-color);
-    padding: 10px;
+    padding: 10px 0;
     border-radius: 10px;
+    margin: 0 auto;
 }
 
 /* Cards */
@@ -151,7 +153,7 @@ body {
 
 .progressbar {
     position: relative;
-    max-width: 500px;
+    max-width: min(500px, 90vw);
     width: 100%;
     height: 10px;
     background: #274545;
